# CrossPlatformIndexer

./: .gitignore  .gitmodules  Cargo.toml
apps/flutter_app/: flutter_rust_bridge.yaml  pubspec.yaml
apps/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter_app/lib/: main.dart
apps/flutter_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
apps/flutter_app/lib/src/rust/api/: fs.dart  simple.dart  types.dart  types.freezed.dart
apps/flutter_app/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/flutter_app/rust/: Cargo.toml
apps/flutter_app/rust/src/: frb_generated.rs
apps/flutter_app/rust/src/api/: fs.rs  simple.rs  types.rs
apps/flutter_app/rust_builder/: Cargo.toml
apps/flutter_app/rust_builder/src/: lib.rs
apps/flutter_app/rust_builder/src/api/: simple.rs
docs/: architecture.md  build-guide.md  mentoring-guide.md
shared_core/: Cargo.toml
shared_core/src/: lib.rs
shared_core/src/api/: fs.rs  mod.rs  simple.rs  types.rs
